# sppd

./: README.md  requirements.txt  setup.cfg  setup.py  sppd_downloader.ipynb  sppd_notebook.ipynb
.github/workflows/: README.md  build.yml  download-ot-data.yml  open-tenders-workflow.yml
notebooks/: sppd_downloader.ipynb  sppd_notebook.ipynb
src/: app.py
src/app/: app.py
src/common/: utils.py
src/db_init/: mappings.py  utils.py
src/dl_parser/: main.py  mappings.py  utils.py
src/open_tenders/: main.py  utils.py
src/utils/: helper.py  mappings.py
tests/: conftest.py  tests.py
tests/db_init/: test_utils.py
tests/dl_parser/: test_main.py  test_utils.py
tests/open_tenders/: __init__.py  test_utils.py
