[metadata]
name = sppd
version = 0.1.0
author = Alvaro Carranza
description = Python tools to interact with Spanish Public Procurement Data
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/alvaro2c/sppd
classifiers =
  Programming Language :: Python :: 3
  License :: OSI Approved :: MIT License
  Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.10
install_requires =
  pandas>=1.1.0,<2.0.0
  requests>=2.24.0,<3.0.0
  beautifulsoup4>=4.9.0,<5.0.0
  pytest>=6.0.0,<7.0.0
  tqdm>=4.0.0,<5.0.0
[options.extras_require]
